app/src/test/resources/programs/valid/conditionals/conditionalAndOrNot.extension
// Use of logical operators 'and', 'or', 'not'
foo main() -> Int = {
    if true and not false then 1 else 0
}
