app/src/test/resources/programs/invalid/conditionals/lackingConditionalExpression.extension
// 'then' block missing required expression
foo main() -> Int = {
    if true then else 0;
}
